--- a/WDkadai31.html
+++ b/WDkadai31.html
@@ -3,9 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title> WDkadai31 </title>
-	<style>
-	
-	</style>
+	<link href="style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,4 +19,5 @@ The government of Tokyo confirmed five COVID-19 infections Sunday — the first 
 
 </body>
 </html>
+
 
